--- a/Unit Testing/Exercise - Unit Testing/Task 1/StudentAndCourses.TestNunit/StudentAndCourses.TestNunit.csproj
+++ b/Unit Testing/Exercise - Unit Testing/Task 1/StudentAndCourses.TestNunit/StudentAndCourses.TestNunit.csproj
@@ -84,6 +84,7 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
+    <Compile Include="CourseTest.cs" />
     <Compile Include="SchoolTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StudentTest.cs" />
