--- a/Unit Testing/Exercise - Unit Testing/Task 2/Deck.NunitTest/Deck.NunitTest.csproj
+++ b/Unit Testing/Exercise - Unit Testing/Task 2/Deck.NunitTest/Deck.NunitTest.csproj
@@ -3,11 +3,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{9648D08E-D814-4D2C-B1CD-9847AF7A0950}</ProjectGuid>
+    <ProjectGuid>{439C1CA4-9946-4706-953A-D4866FFCBFC5}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Deck.Test</RootNamespace>
-    <AssemblyName>Deck.Test</AssemblyName>
+    <RootNamespace>Deck.NunitTest</RootNamespace>
+    <AssemblyName>Deck.NunitTest</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{3AC096D0-A1C2-E12C-1390-A8335801FDAB};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
@@ -67,8 +67,7 @@
       <HintPath>..\packages\NUnit3TestAdapter.3.4.1\lib\NUnit3.TestAdapter.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="Santase.Logic, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
+    <Reference Include="Santase.Logic">
       <HintPath>..\Testing Project\Santase.Logic.dll</HintPath>
     </Reference>
     <Reference Include="System" />
