updating model and fix on data teplate loader

--- a/Databases/Exercise - Entity Framework Code First/DataManipulator/DataManipulator.csproj
+++ b/Databases/Exercise - Entity Framework Code First/DataManipulator/DataManipulator.csproj
@@ -50,6 +50,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BaseManipulator.cs" />
+    <Compile Include="CourseManipulator.cs" />
+    <Compile Include="HomeworkManipulator.cs" />
     <Compile Include="Interfaces\IManipulator.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StudentsManipulator.cs" />
